--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,7 @@ ul.b {
   padding-top: 100px;
   overflow: hidden;
   border: 1px solid #ccc;
+  /* background-color: #f1f1f1; */
   background-color: #f1f1f1;
   padding-bottom: 100px;
   height: 650px;
@@ -209,9 +210,25 @@ ul.b {
 }
 
 .copyright {
-  padding: 50px;
   text-align: left;
   font-size: 8px;
+}
+
+.hours {
+  padding: 50px;
+}
+
+.hours-header {
+  font-size: 14px;
+  color: maroon;
+  font-weight: bold;
+  text-align: center;
+}
+
+.hours-text {
+  text-align: center;
+  font-size: 14px;
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
@@ -315,5 +332,5 @@ ul.b {
 
 .footer {
   padding: 10px;
-  background-color: white;
+  background-color: lightgrey;
 }
