--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 
 .home-background-image1 {
   background-attachment: fixed;
-  background-image: url("./components/homeImage1dark.jpeg");
+  background-image: url("./components/homeImage.jpg");
   min-height: 500px;
   background-position: center;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@
 
 .home-background-image2 {
   background-attachment: fixed;
-  background-image: url("./components/homeImage1dark.jpeg");
+  background-image: url("./components/homeImage.jpg");
   min-height: 500px;
   background-position: center;
   background-repeat: no-repeat;
