--- a/src/App.css
+++ b/src/App.css
@@ -21,15 +21,15 @@
 
 .home-background-image1 {
   background-attachment: fixed;
-  background-image: url("./components/homeImage.jpg");
+  background-image: url("./components/homeImage1dark.jpeg");
   min-height: 500px;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
 }
 
 .home-background-image2 {
   background-attachment: fixed;
-  background-image: url("./components/homeImage.jpg");
+  background-image: url("./components/homeimage2dark.jpeg");
   min-height: 500px;
   background-position: center;
   background-repeat: no-repeat;
