--- a/src/App.css
+++ b/src/App.css
@@ -152,8 +152,8 @@ p {
 
 .Body-left {
   float: left;
-  display: block;
   text-align: left;
+  vertical-align: middle;
   min-height: 100vh;
   font-size: calc(10px + 2vmin);
 }
