--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ p {
 
 .image-left {
   float: left;
-  padding-left: 500px;
+  padding-left: 25%;
   width: 25%;
   align-items: left;
   margin-right: 15px;
